--- a/_config.yml
+++ b/_config.yml
@@ -67,10 +67,10 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "yuyuji007@gmail.com"
+  # facebook: deanattali
+  github: hongdayu
+  # twitter: hongdayu
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -155,7 +155,7 @@ date_format: "%B %-d, %Y"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "Asia/Shanghai"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
